# TriStage-RAG

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  KNOWN_ISSUES.md  README.md  pyproject.toml  requirements.txt  run_benchmark.py  test_benchmark.py  test_run.py
ab_runs/: compile_more.py
benchmark/: README.md  __init__.py  config.yaml  run_mteb_evaluation.py  tristage_mteb_model.py
non_mcp/: __init__.py  ab_compare.py  answer_from_rag.py  embed_and_query.py  main.py  pipeline_config.yaml  requirements.txt  respond_stage3.py
non_mcp/webui/: __init__.py  app.py
research/ingestion-pipeline/: REPORT.md  brief.md
research/ingestion-pipeline/findings/: F1.md  F2.md  F3.md  F4.md  F5.md
tests/: conftest.py  test_pipeline.py  test_stage1.py  test_stage2.py  test_stage3.py  test_utils.py
tristage_rag/: __init__.py  base_stage.py  retrieval_pipeline.py  stage1_retriever.py  stage2_rescorer.py  stage3_reranker.py  utils.py
